--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.11",
     "lucide-react": "^0.534.0",
     "react": "^19.1.0",
